--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm4.html
@@ -1,14 +1,16 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 5 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 5</li>
-       
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 5</li>
+        <li class="active">Theme 4</li>
+               
 </ol>
     
     
@@ -21,7 +23,7 @@
       <p>Find the words in the text in exercise 7. Then choose the correct option.</p>
 
       <div class="col-sm-12 col-md-12">
-        <img src="../static/img/modulo1/unity1/Lesson5Theme4.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson5Theme4.png' %}" alt="No found">
       </div>
 
       <br>
