--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson6-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson6-tm1.html
@@ -1,14 +1,16 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 6 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 6</li>
-              
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 6</li>
+        <li class="active">Theme 1</li>
+               
 </ol>
     
     
@@ -22,10 +24,10 @@
 
       <div class="col-sm-12 col-md-12">
         <div class="col-sm-8 col-md-8">
-          <img src="../static/img/modulo1/unity1/Lesson6Theme1.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme1.png' %}" alt="No found">
         </div>
        <div class="col-sm-4 col-md-4">
-          <img src="../static/img/modulo1/unity1/Lesson6Theme1img2.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme1img2.png' %}" alt="No found">
         </div>
       </div>  
 
@@ -36,12 +38,12 @@
         <p>Listen and complete the form in your notebook.</p>
 
         <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK27.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK27.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element. (AUDIO 27)
         </audio>
 
           <div class="col-sm-12 col-md-12">
-            <img src="../static/img/modulo1/unity1/Lesson6Theme1img3.png" alt="No found">
+            <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme1img3.png' %}" alt="No found">
           </div>
 
          <div class="col-sm-12 col-md-12">
