--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson6-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson6-tm2.html
@@ -1,14 +1,16 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 6 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 6</li>
-              
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 6</li>
+        <li class="active">Theme 2</li>
+               
 </ol>
     
     
@@ -24,7 +26,7 @@
 
         <div class="col-sm-12 col-md-12">
           <div class="col-sm-9 col-md-9">
-            <img src="../static/img/modulo1/unity1/Lesson6Theme2.png" class="img-responsive" alt="No found">
+            <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme2.png' %}" alt="No found">
           </div>
           <div class="col-sm-3 col-md-3">
            <table class="table table-bordered">
@@ -49,7 +51,7 @@
       <div class="col-sm-12 col-md-12"></div>
 
       <div class="col-sm-12 col-md-12">
-         <img src="../static/img/modulo1/unity1/Lesson6Theme2img2.png" alt="No found">
+         <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme2img2.png' %}" alt="No found">
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -66,7 +68,7 @@
           </ul>
         </div>
         <div class="col-sm-4 col-md-4">
-          <img src="../static/img/modulo1/unity1/Lesson6Theme2img3.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson6Theme2img3.png' %}" alt="No found">
         </div>
         
       </div>
