--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson7-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson7-tm4.html
@@ -1,13 +1,15 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 7 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 7</li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad3' %}">Unity 3</a></li>
+        <li>Lesson 7</li>
+        <li class="active">Theme 4</li>
                
 </ol>
     
