--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -18,7 +18,7 @@
         <div class="navbar-collapse collapse sidebar-navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 1 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 1 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Theme 1</a></li>
                 <li><a href="{% url 'modulo1-unidad1-tm1' %}">Theme 2</a></li>
@@ -28,7 +28,7 @@
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Theme 1</a></li>
                 <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Theme 2</a></li>
@@ -38,7 +38,7 @@
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson3-tm1' %}">Theme 1 </a></li>
                 <li><a href="{% url 'modulo1-unidad1-lesson3-tm2' %}">Theme 2 </a></li>
@@ -48,7 +48,7 @@
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 4 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 4 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson4-tm1' %}">Theme 1 </a></li>
                 <li><a href="{% url 'modulo1-unidad1-lesson4-tm2' %}">Theme 2 </a></li>
@@ -58,7 +58,7 @@
                   </ul></li>
 
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 5 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 5 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson5-tm1' %}">Theme 1 </a></li>
       			<li><a href="{% url 'modulo1-unidad1-lesson5-tm2' %}">Theme 2 </a></li>
@@ -68,7 +68,7 @@
                   </ul></li>
 
                <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 6 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 6 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson6-tm1' %}">Theme 1 </a></li>
       			<li><a href="{% url 'modulo1-unidad1-lesson6-tm2' %}">Theme 2</a></li>
@@ -78,7 +78,7 @@
                   </ul></li>
 
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 7 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 3 - Lesson 7 <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson7-tm1' %}">Theme 1</a></li>
       			<li><a href="{% url 'modulo1-unidad1-lesson7-tm2' %}">Theme 2</a></li>
@@ -88,7 +88,7 @@
                   </ul></li>
 
                <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 8 <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 3 - Lesson 8 <b class="caret"></b></a>
                <ul class="dropdown-menu">
                 <li><a href="{% url 'modulo1-unidad1-lesson8-tm1' %}">Theme 1 </a></li>
       			<li><a href="{% url 'modulo1-unidad1-lesson8-tm2' %}">Theme 2</a></li>
