--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm2.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 1 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 1</li>
+        <li>Lesson 1</li>
+        <li class="active">Theme 1</li> 
 </ol>
 
         {% include 'plantilla3.html' %}
@@ -17,10 +19,10 @@
       <h3></h3>
         <hr>
       <p>Listen and read the dialogues A-D. Match them to pictures 1-4</p>
-      <audio controls="controls" src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3" type="audio/mpeg">
+      <audio controls="controls" src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK01.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
       </audio>
-      <div class="centered"><img src="../static/img/modulo1/unity1/read-1.PNG" class="img-responsive" alt=""/></div>
+      <div class="centered"><img src="{% static 'img/modulo1/unity1/read-1.PNG' %}" class="img-responsive" alt=""/></div>
 
       <br />
       <div class="col-sm-6 col-md-6">
@@ -63,7 +65,7 @@
       <tr>
           <td><b>Listen and repeat the words</b>
               <audio controls>
-              <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3" type="audio/mpeg">
+              <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK02.mp3' %}" type="audio/mpeg">
                 Your browser does not support the audio element.
               </audio>
               <p>Hi! Hello! How are you?</p></td>
@@ -82,7 +84,7 @@
         <hr>
         <p>Listen and repeat these sentences.</p>
         <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK03.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK03.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
         <ul>
