--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm3.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson1-tm3.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 1 {% endblock %}
 
 {%  block content %}
@@ -7,9 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 1</li>
-            
-        
+        <li>Lesson 1</li>
+        <li class="active">Theme 3</li>            
 </ol>
 
         {% include 'plantilla3.html' %}
@@ -20,7 +20,7 @@
         <hr>
       <p>Listen and choose the correct response, A, B, or C.</p>
         <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK04.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK04.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
          </audio>
 
@@ -74,13 +74,13 @@
 
       <p>Now listen and check your answers</p>
         <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK05.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK05.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
       <div class="col-sm-12 col-md-12">
       <br />
-      <div class="centered"><img src="../static/img/modulo1/unity1/listen-1.PNG" class="img-responsive" alt=""/></div></div>
+      <div class="centered"><img src="{% static 'img/modulo1/unity1/listen-1.PNG' %}" class="img-responsive" alt=""/></div></div>
 
     </div><!--div-->
 </div>
