--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm1.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 2 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 2</li>
+        <li>Lesson 2</li>
+        <li class="active">Theme 1</li>  
          
 </ol>
 
@@ -19,13 +21,13 @@
         <hr>
       <p>Listen to four students talking and match them to the ID cards A–D.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK06.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK06.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
       <br />
       <div class="centered">
-          <img src="../static/img/modulo1/unity1/listen-2.PNG" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo1/unity1/listen-2.PNG' %}" class="img-responsive" alt=""/>
       </div>
         <br />
         <h2>Focus on Vocabulary</h2>
@@ -34,7 +36,7 @@
       <div class="col-sm-6 col-md-6">
         <p>Listen and repeat.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK07.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK07.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
           <br/>
@@ -54,7 +56,7 @@
       <tr>
           <td><b>Listen and repeat </b>
               <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK08.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK08.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
               <p>Learn the vowels first. Listen and repeat.</p>
@@ -79,7 +81,7 @@
       <br />
       <p>Listen and choose the name you hear.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK09.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK09.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
       <br />
@@ -110,12 +112,12 @@
       <br />
        <p>Listen and write the names of students 1–3 in your notebook.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK10.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK10.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
           <br/>
       <div class="centered">
-          <img src="../static/img/modulo1/unity1/listen-2-1.PNG" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo1/unity1/listen-2-1.PNG' %}" class="img-responsive" alt=""/>
       </div></div>
 
        </div>
