--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm2.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 2 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 2</li>
+        <li>Lesson 2</li>
+        <li class="active">Theme 2</li>  
    
 </ol>
 
@@ -21,7 +23,7 @@
 
       <div class="col-sm-6 col-md-6">
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK11.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK11.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
           <br /><br/>
@@ -39,7 +41,7 @@
       </div>
       <div class="col-sm-6 col-md-6">
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK12.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK12.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
       <br /><br/>
@@ -88,7 +90,7 @@
       <p>Listen and complete the forms.</p>
 
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK13.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK13.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
           <br/><br/>
