--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm3.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm3.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 2 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 2</li>
+        <li>Lesson 2</li>
+        <li class="active">Theme 3</li>  
       
 </ol>
     
@@ -147,7 +149,7 @@
       <p>Listen and complete the forms in your notebook.</p>
 
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK14.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK14.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element.(AUDIO 14)
           </audio>
           <br/><br/>
