--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm4.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 2 {% endblock %}
 
 {%  block content %}
@@ -7,11 +8,10 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 2</li>
+        <li>Lesson 2</li>
+        <li class="active">Theme 4</li>  
               
-</ol>
-    
-    
+</ol>   
            {% include 'plantilla3.html' %}
               
   <div class="col-sm-9 col-md-9">
