--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm1.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 3 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 3</li>
+        <li>Lesson 3</li>
+        <li class="active">Theme 1</li>  
     
 </ol>
     
@@ -21,13 +23,13 @@
       <p>Look at the vocabulary box and say the colours in each flag. <br> Then write the name of the country for each flag. <br> Example: It is yellow and red.</p>
 
       <center>
-        <img src="../static/img/modulo1/unity1/Lesson3Theme1.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme1.png' %}" alt="No found">
       </center>
   
       <br />
 
       <div class="centered">
-          <img src="../static/img/modulo1/unity1/Lesson3Theme1img3.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme1img3.png' %}" alt="No found">
           <br>
           <br>
       </div>
@@ -35,7 +37,7 @@
       <div class="col-sm-12 col-md-12">
 
       <div class="col-sm-6 col-md-6">
-        <img src="../static/img/modulo1/unity1/Lesson3Theme1img2.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme1img2.png' %}" alt="No found">
       </div>
 
         <div class="col-sm-6 col-md-6">
@@ -70,7 +72,7 @@
       <div class="col-sm-12 col-md-12">
 
         <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK15.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK15.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element. (AUDIO 15)
           </audio>
 
@@ -108,7 +110,7 @@
       <div class="col-sm-12 col-md-12">
         <p>Listen and match the people to their nationalities.</p>
           <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK16.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK16.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element. (AUDIO 16)
           </audio>
           <br/>
