--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm3.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm3.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 3 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 3</li>
+        <li>Lesson 3</li>
+        <li class="active">Theme 3</li> 
               
 </ol>
     
@@ -82,7 +84,7 @@
         <p>Listen and repeat the sentences.</p>
 
          <audio controls>
-          <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK17.mp3" type="audio/mpeg">
+          <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK17.mp3' %}" type="audio/mpeg">
             Your browser does not support the audio element. (AUDIO 17)
           </audio>
 
@@ -107,7 +109,7 @@
 
           <div class="col-sm-12 col-md-12">
             <audio controls>
-              <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK18.mp3" type="audio/mpeg">
+              <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK18.mp3' %}" type="audio/mpeg">
               Your browser does not support the audio element. (AUDIO 18)
             </audio>
           </div>
@@ -134,7 +136,7 @@
               <br/>
           </div>
           <div class="col-sm-6 col-md-6">
-            <img src="../static/img/modulo1/unity1/Lesson3Theme3.png" alt="No found">
+            <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme3.png' %}" alt="No found">
           </div>
       </div>
 
