--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm4.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 3 {% endblock %}
 
 {%  block content %}
@@ -7,7 +8,8 @@
     <ol class="breadcrumb">
   <li>Module 1</li>
         <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 3</li>
+        <li>Lesson 3</li>
+        <li class="active">Theme 4</li> 
               
 </ol>
     
@@ -21,7 +23,7 @@
       <p>Complete the text with the correct form of be (affirmative or negative).</p>
 
       <div class="col-sm-12 col-md-12">
-        <img src="../static/img/modulo1/unity1/Lesson3Theme4.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme4.png' %}" alt="No found">
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -64,7 +66,7 @@
         <p>In your notebook, complete the text with information about you. Then write some sentences about your best friend. Use and and but to join sentences.</p>
 
         <div class="col-sm-12 col-md-12">
-          <img src="../static/img/modulo1/unity1/Lesson3Theme4img2.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme4img2.png' %}" alt="No found">
         </div>
       </div>
 
@@ -77,7 +79,7 @@
       <p>Now tell your partner about you and your best friend.</p>
 
        <div class="col-sm-6 col-md-6 col-sm-offset-6 col-md-offset-6">
-          <img src="../static/img/modulo1/unity1/Lesson3Theme4img3.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson3Theme4img3.png' %}" alt="No found">
         </div>
 
           </div>
