--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm1.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 4 {% endblock %}
 
 {%  block content %}
@@ -6,8 +7,9 @@
    <div class="container initial">
     <ol class="breadcrumb">
   <li>Module 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 4</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 4</li>
+        <li class="active">Theme 1</li> 
                
 </ol>
     
@@ -23,7 +25,7 @@
      
       <div class="col-sm-12 col-md-12">          
         <center>  
-         <img src="../static/img/modulo1/unity1/Lesson4Theme1.png" alt="">
+         <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme1.png' %}" alt="">
         </center>
       </div>
 
@@ -33,7 +35,7 @@
         <p>Find more family members and complete the chart in your notebook.</p>
 
         <center>  
-         <img src="../static/img/modulo1/unity1/Lesson4Theme1img2.png" alt="No found">
+         <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme1img2.png' %}" alt="No found">
         </center>
       </div>
 
@@ -42,7 +44,7 @@
       <div class="col-sm-12 col-md-12">
         <p>Find more family members and complete the chart in your notebook.</p>
 
-         <img src="../static/img/modulo1/unity1/Lesson4Theme1img3.png" alt="No found">
+         <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme1img3.png' %}" alt="No found">
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -64,7 +66,7 @@
         </div>
 
         <div class="col-sm-12 col-md-12">
-          <img src="../static/img/modulo1/unity1/Lesson4Theme1img4.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme1img4.png' %}" alt="No found">
         </div>
       </div>
 
