--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm3.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm3.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 4 {% endblock %}
 
 {%  block content %}
@@ -6,8 +7,9 @@
    <div class="container initial">
     <ol class="breadcrumb">
   <li>Module 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 4</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 4</li>
+        <li class="active">Theme 3</li>
                 
 </ol>
     
@@ -21,7 +23,7 @@
 
       <div class="col-sm-12 col-md-12">      
 
-        <img src="../static/img/modulo1/unity1/Lesson4Theme3.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme3.png' %}" alt="No found">
 
        <div class="col-sm-12 col-md-12">
           <div class="col-sm-6 col-md-6">
@@ -76,7 +78,7 @@
           </ul>
         </div>
          <div class="col-sm-6 col-md-6">
-             <img src="../static/img/modulo1/unity1/Lesson4Theme3img2.png" alt="No found">
+             <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme3img2.png' %}" alt="No found">
         </div>
         </div>
       </div>
