--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm4.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson4-tm4.html
@@ -1,4 +1,5 @@
 {% extends 'plantilla2.html' %}
+{% load staticfiles %}
 {% block title %} Unity 1 - Lesson 4 {% endblock %}
 
 {%  block content %}
@@ -6,8 +7,9 @@
    <div class="container initial">
     <ol class="breadcrumb">
   <li>Module 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unity 1</a></li>
-        <li class="active">Lesson 4</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 4</li>
+        <li class="active">Theme 4</li>
       
 </ol>
     
@@ -21,13 +23,13 @@
       <p>Read the email and complete the chart in your notebook.</p>
 
       <div class="col-sm-12 col-md-12">
-        <img src="../static/img/modulo1/unity1/Lesson4Theme4.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme4.png' %}" alt="No found">
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
 
       <div class="col-sm-12 col-md-12">
-        <img src="..//static/img/modulo1/unity1/Lesson4Theme4img2.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme4img2.png' %}" alt="No found">
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -40,7 +42,7 @@
 
           <div class="col-sm-12 col-md-12">
              <div class="col-sm-8 col-md-8">
-                <img src="../static/img/modulo1/unity1/Lesson4Theme4img3.png" alt="No found">
+                <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme4img3.png' %}" alt="No found">
              </div>
              <div class="col-sm-4 col-md-4">
                    <table class="table table-bordered">
@@ -73,7 +75,7 @@
 
           <div class="col-sm-12 col-md-12">
              <div class="col-sm-8 col-md-8">
-                <img src="../static/img/modulo1/unity1/Lesson4Theme4img3.png" alt="No found">
+                <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme4img3.png' %}" alt="No found">
              </div>
              <div class="col-sm-4 col-md-4">
           <table class="table table-bordered">
@@ -99,7 +101,7 @@
             <p>prepare a presentation of your family. Bring pictures and describe the people in them.</p>
           </div> 
           <div class="col-sm-4 col-md-4">
-            <img src="../static/img/modulo1/unity1/Lesson4Theme4img4.png" alt="No found">
+            <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson4Theme4img4.png' %}" alt="No found">
           </div>         
         </div>
 
