--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
@@ -1,13 +1,15 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 5 {% endblock %}
 
 {%  block content %}
     
    <div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 5</li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 5</li>
+        <li class="active">Theme 1</li>
               
 </ol>
     
@@ -22,7 +24,7 @@
 
       <div class="col-sm-12 col-md-12">
         <audio controls>
-            <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK23.mp3" type="audio/mpeg">
+            <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK23.mp3' %}" type="audio/mpeg">
               Your browser does not support the audio element. (AUDIO 23)
         </audio>
       </div>
@@ -52,10 +54,10 @@
 
       <div class="col-sm-12 col-md-12">
         <div class="col-sm-8 col-md-8">
-          <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson5Theme1.png' %}" alt="No found">
         </div>
         <div class="col-sm-4 col-md-4">
-          <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1img2.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson5Theme1img2.png' %}" alt="No found">
         </div>
       </div>
 
@@ -65,18 +67,18 @@
         <p>Listen to Michelle, the first speaker, again and complete the chart in your notebook. Felipe’s family</p>
 
         <audio controls>
-            <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK24.mp3" type="audio/mpeg">
+            <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK24.mp3' %}" type="audio/mpeg">
               Your browser does not support the audio element. (AUDIO 24)
         </audio>
         <br>
-        <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1img3.png" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson5Theme1img3.png' %}" alt="No found">
 
       </div>
 
       <div class="col-sm-12 col-md-12">
         <p>Complete the sentences about Felipe’s family with a word from the box.</p>
 
-        <img src="../static/img/modulo1/unity1/Lesson5Theme1img4.png" alt="No found">
+        <img src="{% static 'img/modulo1/unity1/Lesson5Theme1img4.png' %}" alt="No found">
                 <br /><br />        <br />
         <div id="pregunta-usuario">
           {% for row in respuesta %}
