--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm2.html
@@ -1,13 +1,15 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 5 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 5</li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad2' %}">Unity 2</a></li>
+        <li>Lesson 5</li>
+        <li class="active">Theme 2</li>
                
 </ol>
     
@@ -133,7 +135,7 @@
 
         <div class="col-sm-12 col-md-12">
           <div class="col-sm-8 col-md-8">
-            <img src="../static/img/modulo1/unity1/Lesson5Theme2.png" class="img-responsive" alt="No found">
+            <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson5Theme2.png' %}" class="img-responsive" alt="No found">
           </div>
           <div class="col-sm-4 col-md-4">
            <table class="table table-bordered">
