--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson7-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson7-tm1.html
@@ -1,13 +1,15 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 7 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 7</li>
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad3' %}">Unity 3</a></li>
+        <li>Lesson 7</li>
+        <li class="active">Theme 1</li>
                
 </ol>
     
@@ -24,13 +26,13 @@
 
       <div class="co-sm-5 col-md-5 col-sm-offset-7 col-md-offset-7">
         <audio controls>
-            <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK31.mp3" type="audio/mpeg">
+            <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK31.mp3' %}" type="audio/mpeg">
               Your browser does not support the audio element. (AUDIO 31)
           </audio>        
       </div>
             
         <div class="col-sm-9 col-md-9">
-          <img src="../static/img/modulo1/unity1/Lesson7Theme1.png" class="img-responsive" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson7Theme1.png' %}" alt="No found">
         </div>
        <div class="col-sm-3 col-md-3">
          
@@ -58,8 +60,8 @@
 
       <div class="col-sm-12 col-md-12">
       <p>Complete your school timetable in your notebook. Use the words in the box.</p>
-        <img src="../static/img/modulo1/unity1/Lesson7Theme1img2.png" alt="No found">
-        <img src="../static/img/modulo1/unity1/Lesson7Theme1img3.png" alt="No found">  
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson7Theme1img2.png' %}" alt="No found">
+        <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson7Theme1img3.png' %}" alt="No found">  
       <p>Look at your timetable and answer the questions.</p>
 
         <div class="col-sm-6 col-md-6">
