--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson8-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson8-tm1.html
@@ -1,14 +1,16 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% load staticfiles %}
+{% block title %} Module 1 - Lesson 8 {% endblock %}
 
 {%  block content %}
     
-   <div class="container initial">
+<div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 1</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 1</a></li>
-        <li class="active">Lesson 8</li>
-      
+  <li>Module 1</li>
+        <li><a href="{% url 'modulo1-unidad3' %}">Unity 3</a></li>
+        <li>Lesson 8</li>
+        <li class="active">Theme 1</li>
+               
 </ol>
     
     
@@ -29,7 +31,7 @@
           </ul>
         </div>
         <div class="col-sm-6 col-md-6">
-          <img src="../static/img/modulo1/unity1/Lesson8Theme1.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson8Theme1.png' %}" alt="No found">
         </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -39,7 +41,7 @@
           <hr>
         <p>Find words in the texts in exercise 1 to complete the chart in your notebook.</p>
 
-          <img src="../static/img/modulo1/unity1/Lesson8Theme1img2.png" alt="No found">
+          <img class="img-responsive" src="{% static 'img/modulo1/unity1/Lesson8Theme1img2.png' %}" alt="No found">
 
         <p>Correct these sentences in your notebook.</p>
 
