--- a/static/css/style-general.css
+++ b/static/css/style-general.css
@@ -1,5 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
+@font-face {
+ font-family: 'Lato'; 
+ src: url('../fonts/Lato-Regular.ttf');
+}
+@font-face {
+ font-family: 'Raleway'; 
+ src: url('../fonts/Raleway-Regular.ttf');
+}
 
 body {
   background-color: #f2f2f2;
