--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -90,10 +90,8 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="{% static 'javascript/jquery.min.js' %}"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{% static 'vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js' %}">
-</script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js' %}"></script>
-    <script src="{% static 'javascript/bootstrap.min.js' %}"></script>
+<script src="{% static 'vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'javascript/bootstrap.min.js' %}"></script>
 
 
 </body>
