--- a/templates/login-profe.html
+++ b/templates/login-profe.html
@@ -9,8 +9,9 @@
     <title> Login Teacher </title>
 
 <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon.ico' %}" />
 <!-- end favicon  -->
 
     <link href="{% static 'vendors/bootstrap-3.3.6/dist/css/bootstrap.css' %}" rel="stylesheet">
