--- a/static/css/style-login.css
+++ b/static/css/style-login.css
@@ -1,4 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+@font-face {
+ font-family: 'Bree Serif'; 
+ src: url('../fonts/BreeSerif-Regular.otf');
+}
 
 body {
 	background: url(../img/bg.jpg) center center no-repeat;
