--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -10,8 +10,9 @@
     <title>{% block title %} {% endblock %}</title>
 
 <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon.ico' %}" />
 <!-- end favicon  -->
 
     <link href="{% static 'css/style-modulo.css' %}" rel="stylesheet">
